<resources>
    <string name="app_name">CasePlanning</string>
    <string name="sign_in">Вход</string>
    <string name="username">Имя:</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="email">"Эл.почта"</string>
    <string name="sign_out">Выход</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="newPassowd">Введите новый пароль</string>
    <string name="rePassword">Введите еще раз пароль</string>
    <string name="resetPassword">Сбросить пароль</string>
    <string name="search">Поиск</string>
    <string name="typeTask">Тип задачи:</string>
    <string name="addphoto">addPhoto</string>
    <string name="addaudio">addAudio</string>
    <string name="addvideo">addVideo</string>
    <string name="addtodolist">addTodoList</string>
    <string name="addtext">addText</string>
    <string name="colorselection">colorSelection</string>
    <string name="color">Цвет</string>
    <string name="data">Дата:</string>
    <string name="calendar">Открыть календарь</string>
    <string name="periodDay">Период дня:</string>
    <string name="chooseReplay"><![CDATA[Нет >]]></string>
    <string name="Replay">Повтор:</string>
    <string name="stop">стоп</string>
    <string name="record">запись</string>
    <string name="playAudio">запуск</string>
    <string name="task">Задача</string>
    <string name="add">Добавить</string>
    <string name="groupTask">Группа задач</string>
    <string name="Access">Доступ</string>
    <string name="progress">Прогресс выполнения</string>
    <string name="Other">Другое</string>
    <string name="setting">Настройки</string>
    <string name="SignOut">Выход</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="addSubTask">+ Добавить подзадачу</string>
    <string name="timer">Таймер:</string>
    <string name="indicate">Указать ></string>
    <string name="reminder">Напоминание:</string>
    <string name="set">Установить ></string>
    <string name="SubTask">Подзадача</string>
    <string name="Task">Задача</string>
    <string name="NameSubTask">Название подзадачи</string>
    <string name="nameFolder">Название папки</string>
    <string name="acсess">Разрешить</string>
    <string name="edit">Изменить</string>
    <string name="tasks">Задачи</string>
    <string name="comment"><u>Комментарий:</u></string>
    <string name="time">Время</string>
    <string name="delete">Удалить</string>
    <string name="tomorrow">Завтра</string>
    <string name="subTask"><u>Подзадачи</u></string>
    <string name="start">Запустить</string>
    <string name="techSupport">Тех.поддержка</string>
    <string name="msg_token_fmt">error</string>
</resources>
