<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" tools:showin="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/groupTask"
                android:icon="@drawable/ic_folder_black_24dp"
                android:title="@string/groupTask" />

        <item
                android:id="@+id/access"
                android:icon="@drawable/ic_group_add_black_24dp"
                android:title="@string/Access" />

        <item
                android:id="@+id/progress"
                android:icon="@drawable/ic_trending_up_black_24dp"
                android:title="@string/progress" />


    <item android:title="@string/Other">
        <menu>

            <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/setting" />
            <item
                    android:id="@+id/techSupport"
                    android:icon="@drawable/ic_trending_up_black_24dp"
                    android:title="@string/setting" />
        </menu>
    </item>

            <item
                    android:id="@+id/signOut"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/SignOut" />
    </group>
</menu>