<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Replay"
                android:textSize="20sp" />

        <TextView
                android:id="@+id/textChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:text="@string/chooseReplay"
                android:textSize="20sp" />

        <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textChoose"
                android:padding="5dp"
                android:text="@string/timer"
                android:textSize="20sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textChoose"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:text="@string/indicate"
                android:textSize="20sp" />

        <TextView
                android:id="@+id/reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timer"
                android:padding="5dp"
                android:text="@string/reminder"
                android:textSize="20sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timer"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:text="@string/set"
                android:textSize="20sp" />
</RelativeLayout>