<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarCreateTask"
                style="@style/Toolbar"
                android:layout_marginBottom="20dp" />
        <LinearLayout
                android:id="@+id/linearLayoutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbarCreateTask"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/typeTask"
                    android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linerLayoutTypeTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutText"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/photo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:contentDescription="@string/addphoto"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

            <ImageButton
                    android:id="@+id/audio"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:contentDescription="@string/addaudio"
                    android:src="@drawable/ic_audiotrack_black_24dp" />

            <ImageButton
                    android:id="@+id/video"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:contentDescription="@string/addvideo"
                    android:src="@drawable/ic_videocam_black_24dp" />

            <ImageButton
                    android:id="@+id/to_do"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:contentDescription="@string/addtodolist"
                    android:src="@drawable/ic_view_list_black_24dp" />

            <ImageButton
                    android:id="@+id/text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:contentDescription="@string/addtext"
                    android:src="@drawable/ic_text_fields_black_24dp" />
        </LinearLayout>

        <FrameLayout
                android:id="@+id/typeTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linerLayoutTypeTask" />

        <LinearLayout
                android:id="@+id/linearLayoutColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/typeTask"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/color"
                    android:textSize="20sp" />

            <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:contentDescription="@string/colorselection"
                    android:src="@drawable/ic_color_lens_black_24dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/data"
                    android:textSize="20sp" />

            <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:contentDescription="@string/colorselection"
                    android:src="@drawable/ic_date_range_black_24dp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayoutPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutColor"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/periodDay"
                    android:textSize="20sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
                android:id="@+id/addSubtask"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutPeriod"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/editTextSubTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@+id/btnAddSubTask"
                    android:layout_toLeftOf="@+id/btnAddSubTask"
                    android:hint="@string/SubTask" />

            <Button
                    android:id="@+id/btnAddSubTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/add" />


                <ListView

                        android:id="@+id/listSubTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btnAddSubTask" />

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/linearLayoutReplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addSubtask">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Replay"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/textChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="@string/chooseReplay"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textChoose"
                    android:padding="5dp"
                    android:text="@string/timer"
                    android:textSize="20sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textChoose"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="@string/indicate"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/timer"
                    android:padding="5dp"
                    android:text="@string/reminder"
                    android:textSize="20sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/timer"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="@string/set"
                    android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addBtn">

            <Button
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/addTask" />

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>