<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/linearLayoutColorAndDate">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/color"
                android:textSize="20sp" />

        <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@null"
                android:contentDescription="@string/colorselection"
                android:src="@drawable/ic_color_lens_black_24dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/data"
                android:textSize="20sp" />

        <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@null"
                android:contentDescription="@string/colorselection"
                android:src="@drawable/ic_date_range_black_24dp" />
</LinearLayout>