<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/textWhite"
        android:id="@+id/linearLayoutMain"
        android:gravity="center"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_marginBottom="50dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_height="wrap_content"
            android:id = "@+id/linearLayoutEdit"
            android:gravity="center"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textColorHint="@color/colorPrimary">

            <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/editEmail"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textColorHint="@color/colorPrimary">

            <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/editPassword"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutEdit"
            android:orientation="vertical">

        <Button
                android:id="@+id/btn_link_signIn"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button"
                android:text="@string/sign_in"
                android:textColor="@android:color/white" />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id = "@+id/btn_resetPassword"
                android:textAlignment="center"
                android:text = "@string/forgotPassword"/>



    </LinearLayout>

</RelativeLayout>