<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:id="@+id/createTaskLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarCreateTask"
                style="@style/Toolbar"
                android:layout_marginBottom="20dp" />

        <LinearLayout
                android:id="@+id/addTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColorHint="@color/colorPrimary">

                <EditText
                        android:id="@+id/editTextTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:hint="@string/Task" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <include
                android:id="@+id/color_date"
                layout="@layout/color_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <include
                android:id="@+id/period"
                layout="@layout/period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        <LinearLayout
                android:id="@+id/SubTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <include
                    android:id="@+id/editSubTask"
                    layout="@layout/sub_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/addSubTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addSubTask"
                    android:textAlignment="center"
                    android:textSize="19sp" />

        </LinearLayout>

        <include
                android:id="@+id/replay"
                layout="@layout/replay_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fieldForComment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColorHint="@color/colorPrimary">

            <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/type"
                    android:hint="@string/comment" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"
                    android:text="@string/edit" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>